# numebot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
api/: run_it.py  run_numerai_weekly.sh  run_numerai_weekly_and_shutdown.sh  run_numerai_weekly_poetry.sh
notebook/: compare_submissions.ipynb  example_model.ipynb  explore_models.ipynb  explore_models_and_data.ipynb  explore_new_data.ipynb
numebot/: __init__.py  env.py  file_names_getter.py  metrics.py  round_manager.py  secret.py  utils.py
numebot/data/: data_constants.py  data_manager.py  data_reader.py
numebot/models/: example_model.py  model_configs_example.csv  numerai_model.py
numebot/monitoring/: metrics_manager.py  metrics_plotter.py
numebot/monitoring/dashboard/: dashboard_constants.py  dashboard_functions.py  dashboard_main.py  dashboard_plots.py
numebot/monitoring_v2/: metrics_plots.py
