[tool.poetry]
name = "numebot"
version = "0.1.0"
description = ""
authors = ["Ricardo Picatoste <rpicatoste@gmail.com>"]
readme = "README.md"
packages = [
    {include = "numebot"},
    {include = "numebot_private", from = "../numebot_private"}
]

[tool.poetry.dependencies]
python = "^3.8.5"
auto-sklearn = "0.12.6"
ipykernel = "*"
ipympl = "^0.9.2"
jupyter = "*"
matplotlib = "^3.6.3"
numerapi = "2.13.0"
numpy = "1.20.1"
pandas = "^1.3.0"
python-dotenv = "^0.21.1"
scikit-learn = "0.24.1"
scikit-optimize = "0.8.1"
scipy = "1.6.1"
xgboost = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
